Fixed some layout issues.

--- a/Service Consumer/public/css/main.css
+++ b/Service Consumer/public/css/main.css
@@ -712,9 +712,9 @@ div#popup-container {
   .flag-icon-ga.flag-icon-squared {
     background-image: url("../flags/1x1/ga.svg"); }
 
-.flag-icon-gb {
+.flag-icon-uk {
   background-image: url("../flags/4x3/uk.svg"); }
-  .flag-icon-gb.flag-icon-squared {
+  .flag-icon-uk.flag-icon-squared {
     background-image: url("../flags/1x1/uk.svg"); }
 
 .flag-icon-gd {
